--- a/src/html/backEnd/backGround.html
+++ b/src/html/backEnd/backGround.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <script type="text/javascript" src="/js/backEnd/eventListner.js"></script>
-    </head>
-    <body></body>
+  <head>
+    <script type="text/javascript" src="/js/public/config.js"></script>
+    <script type="text/javascript" src="/js/backEnd/eventListner.js"></script>
+  </head>
+  <body></body>
 </html>
