--- a/src/html/backEnd/optionPage.html
+++ b/src/html/backEnd/optionPage.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" href="/css/3rdParty/bootstrap-min-v3.2.0.css">
   <link rel="stylesheet" type="text/css" href="/css/backEnd/backEndGlobal.css">
   <script type="text/javascript" src="/js/3rdParty/jquery-min-v2.1.1.js"></script>
+  <script type="text/javascript" src="/js/public/config.js"></script>
   <script type="text/javascript" src="/js/backEnd/optionPage.js"></script>
 </head>
 
