--- a/src/html/frontEnd/trashPanel.html
+++ b/src/html/frontEnd/trashPanel.html
@@ -1,32 +1,30 @@
 <div id="DNWSYA-OptsPanel">
-  <div class="btn btn-default" id="shieldUser">
+  <div class="btn btn-default" id="shieldAreaUser" style="width: 101px;">
     <span class="glyphicon glyphicon-trash"></span> 屏蔽用户
   </div>
 
-  <button type="button" class="btn btn-default">
+  <div type="button" class="btn btn-default" style="width: 101px; margin-top: 5px;">
     <span class="glyphicon glyphicon-trash"></span> 屏蔽网址
-  </button>
-
-  <button type="button" class="btn btn-default">
-    <span class="glyphicon glyphicon-align-left"></span> 屏蔽More
-  </button>
-  
-  <div id="demo" class="collapse in">
   </div>
+
+  <div type="button" class="btn btn-default" id="shieldAreaMore" style="width: 101px; margin-top: 5px;">
+    <span class="glyphicon glyphicon-align-left"></span> More...
+  </div>
+
 </div>
 
 <script type="text/javascript">
 var initElemsOnDrag = ( function(){
   
   var slt = {
-    userSlt     : 'td.subtext > a[href^="user?id="]',
-    userTrashSlt: '#shieldUser'
+    userLink     : 'td.subtext > a[href^="user?id="]',
+    trashAreaUser: '#shieldAreaUser'
   }
   
   function user(){
-    $(slt.userSlt).on('dragstart', function(e){
+    $(slt.userLink).on('dragstart', function(e){
       var userID = $(this).html();
-      $(slt.userTrashSlt).data('userID', userID);
+      $(slt.trashAreaUser).data('userID', userID);
     });
   }
 
@@ -41,31 +39,38 @@ var sendNewItemToChrome = function(type, value){
     evData: {type: type, value: value}
   };
   chrome.runtime.sendMessage(msg, function(resp){
-    console.log('chrome resp');
-    console.log(resp);
     FilterContent(resp.evData.list);
   });
 };
 
 $( function() {
   initElemsOnDrag.user();
-  var $sU = $('#shieldUser');
-  $sU.on('dragover', function(e){
+
+  $('#shieldAreaUser').on('dragover', function(e){
     e.preventDefault();
-    var $this = $(this);
-    $this.addClass('onDragOver');
+    $(this).addClass('onDragOver');
   }).on('dragleave', function(e){
     var $this = $(this);
     clearTimeout( $this.data('timeoutID') );
     var tmpID = setTimeout( function(){
       $this.removeClass('onDragOver');
-    }, 200);
+    }, 260);
     $this.data('timeoutID', tmpID);
   }).on('drop', function(e){
     e.preventDefault();
     var userID = $(this).data('userID');
     $(this).trigger('dragleave');
-    sendNewItemToChrome('user', userID);
+    sendNewItemToChrome(ShieldList.elemList[0], userID);
+  });
+
+  $('#shieldAreaMore').on('click', function(){
+    // 打开后台选项页
+    var url = PageParams.ExtHost + '/html/backEnd/optionPage.html';
+    var msg = {
+      type: 'DNWSYA:Request:NewTab:TabPage',
+      evData: {url: url}
+    };
+    chrome.runtime.sendMessage(msg);
   });
 });
 </script>
