过滤屏蔽内容：过滤逻辑优化，代码重构了一下，raw提交

--- a/src/html/frontEnd/oneTrashRow.html
+++ b/src/html/frontEnd/oneTrashRow.html
@@ -5,6 +5,7 @@
     <td class="title">
       <a name="title" href="#" style="color: #828282;"></a>
       <a name="author" href="#" style="color: #828282;"></a>
+      <span name="stringWhy" style="color: #828282;"></span>
     </td>
   </tr>
 </table>
