后台管理屏蔽项 - 样式美化

--- a/src/html/backEnd/optionPage.html
+++ b/src/html/backEnd/optionPage.html
@@ -15,7 +15,7 @@
     <hr>
     <div class="shieldType">用户</div>
     <div class="row">
-      <div class="col-md-2" name="userItem-Model" style="display: none; font-size: 22px;">
+      <div class="col-md-2" name="userItem-Model" style="display: none;">
         <button class="btn trashItem" data-value="" data-shield_type="users">
           <span></span>
           <a name="delUserIcon" href="#" style="display: none;"><i class="DNWSYA-btn-icon glyphicon glyphicon-remove"></i></a>
@@ -26,10 +26,11 @@
     <hr>
     <div class="shieldType">网站</div>
     <div class="row">
-      <div class="col-md-3" name="hostItem-Model" style="display: none; font-size: 23px; height: 35px">
-        <label class="btn trashItem" data-value="" data-shield_type="hosts">
+      <div class="col-md-3" name="hostItem-Model" style="display: none;">
+        <button class="btn trashItem" data-value="" data-shield_type="hosts">
+          <span></span>
           <a name="delUserIcon" href="#" style="display: none;"><i class="DNWSYA-btn-icon glyphicon glyphicon-remove"></i></a>
-        </label>
+        </button>
       </div>
     </div>
 
