--- a/src/html/backEnd/backGround.html
+++ b/src/html/backEnd/backGround.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <script type="text/javascript" src="/js/public/config.js"></script>
+    <script type="text/javascript" src="/js/backEnd/shieldManager.js"></script>
     <script type="text/javascript" src="/js/backEnd/eventListner.js"></script>
   </head>
   <body></body>
