网址屏蔽功能完成

--- a/src/html/backEnd/optionPage.html
+++ b/src/html/backEnd/optionPage.html
@@ -44,10 +44,10 @@
     <div class="row shieldType" name="addrHeadTitle">
       <span>网址</span>
       <a href="#" style="display: none; color:black;"><span class="glyphicon glyphicon-plus"></span></a>
-      <input style="display: none;" data-shield_type="addres" type="text" placeholder="示例: www.example.com/foo">
+      <input type="text" data-shield_type="addres" placeholder="示例: www.example.com/foo" style="display: none;">
     </div>
     <div class="row">
-      <div class="col-md-3" name="addrItem-Model" style="display: none;">
+      <div class="col-md-4" name="addrItem-Model" style="display: none;">
         <button class="btn trashItem" data-value="" data-shield_type="addres">
           <span></span>
           <a name="delUserIcon" href="#" style="display: none;"><i class="DNWSYA-btn-icon glyphicon glyphicon-remove"></i></a>
@@ -59,13 +59,14 @@
     <div class="row shieldType" name="titleHeadTitle">
       <span>标题</span>
       <a href="#" style="display: none; color:black;"><span class="glyphicon glyphicon-plus"></span></a>
-      <input style="display: none;" data-shield_type="titles" type="text" placeholder='示例: "8个惊艳的"、"/regex here/"'>
+      <input type="text" data-shield_type="titles" placeholder='示例: "8个惊艳的"、"/regex here/"' style="display: none;">
     </div>
     <div class="row">
-      <div class="col-md-3" name="titleItem-Model" style="display: none; font-size: 23px; height: 35px">
-        <label class="btn trashItem" data-value="" data-shield_type="addres">
+      <div class="col-md-3" name="titleItem-Model" style="display: none;">
+        <button class="btn trashItem" data-value="" data-shield_type="titles">
+          <span></span>
           <a name="delUserIcon" href="#" style="display: none;"><i class="DNWSYA-btn-icon glyphicon glyphicon-remove"></i></a>
-        </label>
+        </button>
       </div>
     </div>
 
