根据标题关键字进行内容过滤的功能完成

--- a/src/html/backEnd/optionPage.html
+++ b/src/html/backEnd/optionPage.html
@@ -59,7 +59,7 @@
     <div class="row shieldType" name="titleHeadTitle">
       <span>标题</span>
       <a href="#" style="display: none; color:black;"><span class="glyphicon glyphicon-plus"></span></a>
-      <input type="text" data-shield_type="titles" placeholder='示例: "8个惊艳的"、"/regex here/"' style="display: none;">
+      <input type="text" data-shield_type="titles" placeholder='示例: "8个惊艳的"、/regex/' title='示例: "8个惊艳的"、"/\d{1,2}个[前沿|惊艳]的/"' style="display: none;">
     </div>
     <div class="row">
       <div class="col-md-3" name="titleItem-Model" style="display: none;">
