--- a/src/html/frontEnd/trashPanel.html
+++ b/src/html/frontEnd/trashPanel.html
@@ -91,7 +91,8 @@ var sendNewItemToChrome = function(type, value){
     evData: {type: type, value: value}
   };
   chrome.runtime.sendMessage(msg, function(resp){
-    FilterContent(resp.evData.shieldList);
+    if ( !resp.result ) return;
+    ContentFilter(resp.evData.shieldList);
   });
 };
 
